--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
 .DS_Store
-
+*TravelApp.xcscheme
 ## Build generated
 
 build/
