--- a/TravelApp/Info.plist
+++ b/TravelApp/Info.plist
@@ -20,14 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>This app requires your location when using the map to provide local points of interest.</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>This app requires your location when using the map to provide local points of interest.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Tag</string>
+	<string>Welcome</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
